--- a/src/Components/LoadingScreen/LoadingScreen.css
+++ b/src/Components/LoadingScreen/LoadingScreen.css
@@ -40,6 +40,7 @@ body {
     width: 1.5em;
     height: 1.5em;
     position: absolute;
+    opacity: 1; /* Set initial opacity to 0 */
   }
   
   .pl__dot:before,
