--- a/src/Components/LoadingScreen/LoadingScreen.css
+++ b/src/Components/LoadingScreen/LoadingScreen.css
@@ -1,17 +1,19 @@
 
 
 .pl {
-    background: var(--bg);
-    box-shadow: 2em 0 2em hsla(0, 0%, 0%, 0.2) inset, -2em 0 2em hsla(0, 0%, 100%, 0.1) inset;
+    box-shadow: 2em 0 2em hsla(0, 0%, 0%, 0.3) inset, -2em 0 2em hsla(0, 0%, 100%, 0.2) inset;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
+    color: rgb(85, 85, 85);
     letter-spacing: 0.1em;
     text-transform: uppercase;
     transform: rotateX(30deg) rotateZ(45deg);
     width: 15em;
     height: 15em;
+    left: calc(50% - 100px);
+    top: calc(50vh - 100px);
   }
   
   .pl,
@@ -43,23 +45,23 @@
     display: block;
     left: 0;
     width: inherit;
-    transition: background-color var(--trans-dur);
+    transition: 0.3s;
   }
   
   .pl__dot:before {
     animation-name: pushInOut1;
-    background-color: var(--bg);
+    background-color:#544545;
     border-radius: inherit;
-    box-shadow: 0.05em 0 0.1em hsla(0, 0%, 100%, 0.2) inset;
+    box-shadow: 0.05em 0 0.1em hsla(0, 0%, 0%, 0.2) inset;
     height: inherit;
     z-index: 1;
   }
   
   .pl__dot:after {
     animation-name: pushInOut2;
-    background-color: var(--primary1);
+    background-color:#f42525;
     border-radius: 0.75em;
-    box-shadow: 0.1em 0.3em 0.2em hsla(0, 0%, 100%, 0.4) inset, 0 -0.4em 0.2em #354f5c inset, 0 -1em 0.25em hsla(0, 0%, 0%, 0.3) inset;
+    box-shadow: 0.1em 0.3em 0.2em hsla(0, 0%, 100%, 0.4) inset, 0 -0.4em 0.2em #354f5c inset, 0 -1em 0.25em hsla(225, 10%, 20%) inset;
     bottom: 0;
     clip-path: polygon(0 75%, 100% 75%, 100% 100%, 0 100%);
     height: 3em;
@@ -157,17 +159,17 @@
   @keyframes pushInOut1 {
     from {
       animation-timing-function: ease-in;
-      background-color: var(--bg);
+      background-color: #544545;
       transform: translate(0, 0);
     }
     25% {
       animation-timing-function: ease-out;
-      background-color: var(--primary2);
+      background-color:#f65555;
       transform: translate(-71%, -71%);
     }
     50%,
     to {
-      background-color: var(--bg);
+      background-color:#544545;
       transform: translate(0, 0);
     }
   }
@@ -175,17 +177,17 @@
   @keyframes pushInOut2 {
     from {
       animation-timing-function: ease-in;
-      background-color: var(--bg);
+      background-color:#544545;
       clip-path: polygon(0 75%, 100% 75%, 100% 100%, 0 100%);
     }
     25% {
       animation-timing-function: ease-out;
-      background-color: var(--primary1);
+      background-color:#f42525;
       clip-path: polygon(0 25%, 100% 25%, 100% 100%, 0 100%);
     }
     50%,
     to {
-      background-color: var(--bg);
+      background-color:#544545;
       clip-path: polygon(0 75%, 100% 75%, 100% 100%, 0 100%);
     }
   }
