--- a/src/Components/RandomScreen/RandomScreen.css
+++ b/src/Components/RandomScreen/RandomScreen.css
@@ -9,11 +9,13 @@
   justify-content: center;
   align-items: center;
   border: 2px solid rgb(0, 0, 0);
+  overflow: hidden;
 }
 
 .horror {
   background-color: rgb(0, 0, 0);
   color: rgb(255, 255, 255);
+  overflow: hidden;
 }
 
 .media {
@@ -25,9 +27,11 @@
   padding: 0;
   object-fit: cover;
   border: 2px solid rgb(0, 0, 0);
+  overflow: hidden;
 }
 
 iframe {
   border: none;
+  overflow: hidden;
 }
 
