--- a/src/Components/MainScreen/MainScreen.css
+++ b/src/Components/MainScreen/MainScreen.css
@@ -69,9 +69,6 @@
     rgb(46, 46, 46) 100%
   );
   border: none;
-  left: calc(50% - 200px); /* Adjusted value to center horizontally within the button container */
-  top: calc(50% - 185px); /* Adjusted value to center vertically within the button container */
-  transform: translate(-50%, -50%); /* Add this line to center the button precisely */
   transition: all 0.3s ease;
 }
 
@@ -91,21 +88,18 @@
 
 .buttonContainer {
   position: relative;
-  left: 600px; /* Adjust the desired horizontal position on the screen */
-  top: 500px; /* Adjust the desired vertical position on the screen */
+  left: 45%;
+  top: 45vh; 
   display: flex;
   justify-content: center;
-  align-items: center;
-  height: 100px;
-  width: 100px;
+  align-items: flex-end;
+  height: 95px;
+  width: 150px;
   transition: 1s;
+  align-content: stretch;
+  flex-wrap: wrap;
+  flex-direction: row;
 }
-
-.flip {
-  transition: 1s;
-  transform-style: preserve-3d;
-}
-
 
 /*
 .button {
