optimisation to the react js game

--- a/src/Components/RandomScreen/RandomScreen.css
+++ b/src/Components/RandomScreen/RandomScreen.css
@@ -35,3 +35,12 @@ iframe {
   overflow: hidden;
 }
 
+
+.counter{
+  z-index: 5;
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  top: 50px;
+color: white;
+}
