--- a/src/Components/FirstButton/MainScreen.css
+++ b/src/Components/FirstButton/MainScreen.css
@@ -2,7 +2,7 @@
 .buttonContainer {
   position: relative;
   left: 45%;
-  top: 100vh; 
+  top: 45vh; 
   display: flex;
   justify-content: center;
   align-items: flex-end;
@@ -103,10 +103,6 @@
   box-shadow: 1px 10px 9px rgb(0, 0, 0);
 }
 
-
-
-
-
 .flip-box {
   transform-style: preserve-3d;
   perspective: 1200px;
@@ -130,7 +126,17 @@ height: 120px;
   animation: front 1s ease-in-out forwards;
 }
 
-
+.bellow {
+  content:"";
+  height: 85px;
+  width: 150px;
+  border-radius: 8px;
+  background-color: rgb(0, 0, 0);
+  display: flex;
+ align-items: center;
+ position: absolute;
+  }
+  
 
 @keyframes front {
   0% {
