--- a/src/Components/SecondButton/SecondBtn.css
+++ b/src/Components/SecondButton/SecondBtn.css
@@ -2,7 +2,43 @@
 .buttonContainer2 {
   position: relative;
   left: 45%;
-  top: 44.5vh; 
+  top: 33.5vh; 
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  height: 95px;
+  width: 150px;
+  transition: 1s;
+  align-content: stretch;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+
+.btnCounter {
+  position: relative;
+  left: 75%;
+  top: -10vh; 
+  display: flex;
+  justify-content: center;
+  align-content: space-around;
+  flex-wrap: wrap;
+  flex-direction: column;
+  height: 60px;
+  width: 100px;
+  transition: 1s;
+  font-weight: bold;
+  text-align: center;
+  color: black;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  border-style: solid;
+}
+
+.btnCounterbox{
+  position: relative;
+  left: 70%;
+  top: 0vh; 
   display: flex;
   justify-content: center;
   align-items: flex-end;
